<resources>
    <string name="app_name">GuessNumber</string>
    <string name="please_enter_a_number_1_10">Please enter a number(1~10)</string>
    <string name="ok">ok</string>
    <string name="yes_you_got_it">Yes!, you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="meassge">Meassge</string>
    <string name="title_activity_material">MaterialActivity</string>

</resources>